[project]
name = "cloudmodel"
version = "0.1.0"
description = "A dataclass model for cloud infrastructure and applications"
authors = [
    {name = "Jose Luis Diaz", email = "jldiaz@uniovi.es"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pint>=0.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
markers = [
    "units: Testing the unit system",
    "property_testing: Slow tests that use hypothesis",
    "repr: Testing string representation of class models"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "black>=22.10.0",
    "mypy>=0.991",
    "hypothesis>=6.61.0",
    "pytest-cov>=4.0.0",
]
